--- a/css/criba.css
+++ b/css/criba.css
@@ -3,7 +3,7 @@
 }
 
 #cribaCont{
-    width: 500px;
+    width: 700px;
     display: inline-block;
 }
 
@@ -17,6 +17,11 @@
     height: 60px;
     width: 60px;
     text-align: center;
+    background-color:  transparent;
+    border: 1px solid;
+    border-style: solid;
+    border-radius: 5px;
+    margin: 2px;
 }
 
 .btn{
